adjust pom.xml